--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,7 @@
 
   <body>
     <ul>  
-      <% flash.each do |name, msg| %>
-        <li><%= msg %></li>
-      <% end %>
+      <%= render 'layouts/messages' %>
     </ul>
     <%= yield %>
   </body>
